--- a/package.json
+++ b/package.json
@@ -7,30 +7,35 @@
   "scripts": {
     "lint": "eslint 'src/**/*'",
     "build": "tsc",
-    "build:watch": "tsc -w && cp src/*.json lib",
     "serve": "node ./lib/index.js",
-    "dev:single": "npm run build && npm run serve",
-    "trace": "npm run build && node --inspect ./lib/index.js",
-    "dev": "npm run build && concurrently \"npm run build:watch\" \"npm run serve\""
+    "dev:readonly": "npm run build && npm run serve",
+    "dev:all": "npm run build && npm run serve",
+    "train": "node classifier.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0",
+    "natural": "^5.0.4",
     "node-filter-async": "^2.0.0",
-    "p-limit": "^3.0.2",
-    "puppeteer": "^5.3.1",
-    "string-similarity": "^4.0.2"
+    "p-limit": "^3.1.0",
+    "puppeteer": "^10.2.0",
+    "string-similarity": "^4.0.4",
+    "uuid": "^8.3.2",
+    "wait": "^0.4.2"
   },
   "devDependencies": {
-    "@types/node": "^14.11.2",
-    "@types/string-similarity": "^3.0.0",
-    "@types/puppeteer": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.10.0",
-    "eslint-plugin-import": "^2.22.1",
-    "typescript": "^4.0.3"
+    "@types/natural": "^2.1.2",
+    "@types/node": "^16.7.1",
+    "@types/puppeteer": "^5.4.4",
+    "@types/string-similarity": "^4.0.0",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.1",
+    "typescript": "^4.3.5"
   }
 }
