--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "natural": "^5.0.4",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/natural": "^2.1.2",
     "@types/node": "^16.7.1",
+    "@types/node-fetch": "^2.5.12",
     "@types/puppeteer": "^5.4.4",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^8.3.1",
