--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "360camp",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "src/index.d.ts",
@@ -17,21 +17,22 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
-    "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0",
+    "@google-cloud/error-reporting": "^2.0.4",
+    "discord-api-types": "^0.23.1",
+    "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
-    "natural": "^5.0.4",
+    "natural": "^5.1.1",
     "node-filter-async": "^2.0.0",
     "p-limit": "^3.1.0",
-    "puppeteer": "^10.2.0",
+    "puppeteer": "^10.4.0",
     "string-similarity": "^4.0.4",
     "uuid": "^8.3.2",
     "wait": "^0.4.2"
   },
   "devDependencies": {
-    "@types/natural": "^2.1.2",
-    "@types/node": "^16.7.1",
-    "@types/node-fetch": "^2.5.12",
+    "@types/natural": "^5.1.0",
+    "@types/node": "^16.10.5",
+    "@types/node-fetch": "^3.0.3",
     "@types/puppeteer": "^5.4.4",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^8.3.1",
@@ -39,6 +40,6 @@
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.4"
   }
 }
