--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "360camp",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "description": "",
   "main": "lib/index.js",
   "typings": "src/index.d.ts",
@@ -18,8 +18,8 @@
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
     "@google-cloud/error-reporting": "^2.0.4",
-    "discord-api-types": "^0.23.1",
-    "discord.js": "^13.2.0",
+    "discord-api-types": "^0.24.0",
+    "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "natural": "^5.1.1",
     "node-filter-async": "^2.0.0",
@@ -30,16 +30,19 @@
     "wait": "^0.4.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/natural": "^5.1.0",
     "@types/node": "^16.10.5",
     "@types/node-fetch": "^2.5.10",
     "@types/puppeteer": "^5.4.4",
+    "@types/rewire": "^2.5.28",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.1",
+    "rewire": "^5.0.0",
     "typescript": "^4.4.4"
   }
 }
