--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
     "serve": "node ./lib/src/index.js",
     "dev": "npm run build && npm run serve",
     "train": "node classifier.js",
-    "start": "npm run dev"
+    "start": "npm install && npm run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/rest": "^0.4.1",
     "@google-cloud/error-reporting": "^2.0.4",
-    "discord-api-types": "^0.24.0",
-    "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0",
-    "natural": "^5.1.1",
-    "node-filter-async": "^2.0.0",
-    "p-limit": "^3.1.0",
-    "puppeteer": "^10.4.0",
+    "discord-api-types": "^0.31.2",
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
+    "natural": "^5.1.13",
+    "node-filter-async": "^3.0.0",
+    "p-limit": "3.1.0",
+    "puppeteer": "^13.5.2",
     "string-similarity": "^4.0.4",
     "uuid": "^8.3.2",
     "wait": "^0.4.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/natural": "^5.1.0",
-    "@types/node": "^16.10.5",
-    "@types/node-fetch": "^2.5.10",
-    "@types/puppeteer": "^5.4.4",
+    "@types/jest": "^27.4.1",
+    "@types/natural": "^5.1.1",
+    "@types/node": "^17.0.25",
+    "@types/node-fetch": "^2.6.1",
+    "@types/puppeteer": "^5.4.5",
     "@types/rewire": "^2.5.28",
     "@types/string-similarity": "^4.0.0",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.1",
-    "rewire": "^5.0.0",
-    "typescript": "^4.4.4"
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.13.0",
+    "eslint-plugin-import": "^2.26.0",
+    "rewire": "^6.0.0",
+    "typescript": "^4.6.3"
   }
 }
